# rl-mujoco-benchmarking

./: .gitignore  main.py  pyproject.toml
algorithms/: base.py  ddqn.py  dqn.py  get_algorithm.py  sac.py
configs/: config.py  config_loader.py
configs/continuous_actions/sac/: cartpole.yaml
configs/ddqn/: cartpole.yaml
configs/discrete_actions/ddqn/: breakout.yaml  cartpole.yaml  lunarlander.yaml
configs/discrete_actions/ddqn/noisynet_ablation/: cartpole_noisynetablation_noisy_0p25.yaml  cartpole_noisynetablation_noisy_0p5.yaml  cartpole_noisynetablation_noisy_2p0.yaml
configs/discrete_actions/dqn/: cartpole.yaml  lunarlander.yaml
configs/discrete_actions/dqn/ddqn_v_dqn_cartpole/: cartpole_dqnvddqn_ddqn.yaml  cartpole_dqnvddqn_dqn.yaml
configs/discrete_actions/dqn/ddqn_v_dqn_lunarlander/: lunarlander_dqnvddqn_ddqn.yaml  lunarlander_dqnvddqn_dqn.yaml
dataclass/: __init__.py  primitives.py  priority_experience_replay.py
networks/: build_network.py  cnn.py  mlp.py
networks/helper/: __init__.py  action_sampler.py  mappings.py  noisylinear.py
trainer/: trainer.py
trainer/helper/: __init__.py  charting.py  config_logger.py  env_setup.py  plot_server.py  result_logger.py  video_grid.py
