[project]
name = "rl-benching-mujoco"
version = "0.1.0"
description = "Benchmarking RL algos on MuJoCo envs."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mujoco>=3.4.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wandb>=0.24.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
