[project]
name = "rl-benching-mujoco"
version = "0.1.0"
description = "Benchmarking RL algos on MuJoCo envs."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium[box2d]>=1.2.3",
    "imageio[ffmpeg]>=2.37.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mediapy>=1.2.5",
    "mujoco>=3.4.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pygame>=2.6.1",
    "swig>=4.4.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wandb>=0.24.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
